# reflaxe.CPP

./: .gitattributes  .gitignore  DevEnv.hxml  LICENSE  README.md  Submit.hx  TODO.md  Test.hxml  extraParams.hxml  haxelib.json
.github/workflows/: main.yml  nightly-build.yml  test-devenv.yml  test.yml
src/: Any.cross.hx  Array.cross.hx  Class.cross.hx  EReg.cross.hx  Math.cross.hx  Std.cross.hx  String.cross.hx  Sys.cross.hx
src/cxx/: Auto.hx  CArray.hx  Char.hx  Compiler.hx  ConstCharPtr.hx  DynamicToString.hx  Move.hx  Ptr.hx  Ref.hx  SharedPtr.hx  SizeT.hx  StdMap.hx  Stdlib.hx  Syntax.hx  UniquePtr.hx  Untyped.hx  VoidPtr.hx
src/cxxcompiler/: Compiler.hx  CompilerInit.hx
src/freecompiler/: FreeCompiler.hx  FreeCompilerInit.hx
src/gcfcompiler/: GCFCompiler.hx  GCFCompilerInit.hx
src/haxe/: Exception.cross.hx  Log.cross.hx  NativeStackTrace.cross.hx  PosInfos.cross.hx
src/ucpp/: Auto.hx  CArray.hx  Compiler.hx  DynamicToString.hx  NativeString.hx  Ptr.hx  SharedPtr.hx  Stdlib.hx  Syntax.hx  Value.hx  VoidPtr.hx
src/unboundcompiler/: UnboundCompiler.hx  UnboundCompilerInit.hx
std/cxx/: Auto.hx  CMake.hx  Compiler.hx  Const.hx  ConstCArray.hx  ConstCharPtr.hx  ConstRef.hx  CppType.hx  DynamicToString.hx  NativeString.hx  Ptr.hx  SharedPtr.hx  Std.hx  StdMap.hx  Stdlib.hx  Syntax.hx  UniquePtr.hx  Untyped.hx  Value.hx
test/: Build.bat  TODO.md  Test_WithHaxelib.hxml  Test_WithRepo.hxml
test/unit_testing/tests/CMake/intended/: CMakeLists.txt  _GeneratedFiles.json  _GeneratedFiles.txt
test/unit_testing/tests/CMake/intended/src/: Main.cpp
(+755 files in other folders)
